--- a/Reacth2.html
+++ b/Reacth2.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Button in React</title>
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   </head>
-  <body id="body">
+  <body>
     <script>
-      var buttonReactElement = React.createElement(
-        "button",
-        {},
-        "React button"
-      );
-      ReactDOM.render(buttonReactElement, document.getElementById("body"));
+      var h2rcelement = React.createElement("h2", {}, "Reactlooks complex");
+      ReactDOM.render(h2rcelement, document.querySelector("body"));
     </script>
   </body>
 </html>
