--- a/Template.html
+++ b/Template.html
@@ -3,8 +3,10 @@
   <head>
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
-    <script></script>
+    <div id="root"></div>
+    <script type="text/babel"></script>
   </body>
 </html>
